added a few apiMethods
not sure if I am doing the put correctly.

--- a/ClientAndProviders.Web.Api/ClientAndProviders.Web.Api.csproj
+++ b/ClientAndProviders.Web.Api/ClientAndProviders.Web.Api.csproj
@@ -204,7 +204,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiResponse\ProviderAvailableShiftResponse.cs" />
     <Compile Include="ApiResponse\ProviderResponse.cs" />
+    <Compile Include="ApiResponse\ProviderSvcCodeResponse.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
