--- a/ClientsAndProviders.Web/package.json
+++ b/ClientsAndProviders.Web/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lodash": "^4.0.0",
+    "ngx-pagination": "^3.1.0",
     "ngx-textarea-autosize": "^1.1.1",
     "ngx-toastr": "^8.1.1",
     "popper.js": "^1.12.9",
