can't save yet..
can't save .. yet... ..

--- a/ClientAndProviders.Web.Api/ClientAndProviders.Web.Api.csproj
+++ b/ClientAndProviders.Web.Api/ClientAndProviders.Web.Api.csproj
@@ -204,6 +204,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiResponse\ClientResponse.cs" />
     <Compile Include="ApiResponse\ProviderAndProviderAvailableShiftResponse.cs" />
     <Compile Include="ApiResponse\ProviderAvailableShiftResponse.cs" />
     <Compile Include="ApiResponse\ProviderResponse.cs" />
